Added note about what asterisks mean

--- a/la.tex
+++ b/la.tex
@@ -16,6 +16,9 @@ lecture 20. I have therefore left two hours leeway, which will get
 filled up with more examples if it becomes clear it is not needed.
 
 
+Sections marked with an asterisk I consider to be nonexaminable.
+
+
 Workshops are scheduled to happen after lectures 2, 6, 10, 14, 18 and
 the first four will have assessed questions.
 
